tests-integration/tests/custom/semantic-errors/type-mismatch/stderr.expected
Exception: Error:
    model.eprime:3:15:
  |
3 | such that 5 + y = 6
  |               ^
Type error:
	Expected: "Number or Enum"
	Got: bool


